Fix logo alignment

--- a/data/styles_yarr1.css
+++ b/data/styles_yarr1.css
@@ -49,6 +49,7 @@ body {
     display: inline-block;
     margin-left: 0;
     padding-right: 0.25em;
+    width: 28px;
 }
 
 .username {
